<resources>
    <string name="app_name">Smarthome App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Splash Strings  -->
    <string name="welcome">Smarthome App</string>

    <!--  Menu Strings  -->
    <string name="item1">Sensor</string>
    <string name="item2">LED</string>
    <string name="item3">Servo</string>
    <string name="item4">Camera</string>
    <string name="item5">Setting</string>

    <!--  Sensor Strings  -->
    <string name="suhuTitle">Kondisi Suhu</string>
    <string name="kelembapanTitle">Kelembapan</string>
    <string name="jarakTitle">Jarak</string>
    <string name="airTitle">Air</string>
    <string name="gasTitle">Gas</string>
    <string name="asapTitle">Asap</string>

    <!--  Dialog Strings  -->
    <string name="dialogInput">IP Address ESP32</string>
    <string name="dialogInputCam">IP Address Camera</string>
</resources>