<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SensorFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollSensor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvSuhu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">
                    <TextView
                        android:id="@+id/tvSuhuTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suhuTitle"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:fontFamily="@font/ubuntu"
                        android:layout_marginBottom="15dp"/>
                    <ImageView
                        android:id="@+id/imgSuhu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_device_thermostat_64"/>
                    <TextView
                        android:id="@+id/tvSuhu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvSuhuTitle"
                        android:text="50\u2103"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:fontFamily="@font/ubuntu"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvKelembapan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">
                    <TextView
                        android:id="@+id/tvKelembapanTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kelembapanTitle"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:fontFamily="@font/ubuntu"
                        android:layout_marginBottom="15dp"/>
                    <ImageView
                        android:id="@+id/imgKelembapan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_dew_point_64"/>
                    <TextView
                        android:id="@+id/tvKelembapan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvKelembapanTitle"
                        android:text="50\u0025"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:fontFamily="@font/ubuntu"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvJarak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">
                    <TextView
                        android:id="@+id/tvJarakTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jarakTitle"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:fontFamily="@font/ubuntu"
                        android:layout_marginBottom="15dp"/>
                    <ImageView
                        android:id="@+id/imgJarak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_straighten_64"/>
                    <TextView
                        android:id="@+id/tvJarak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvJarakTitle"
                        android:text="30 | CM"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:fontFamily="@font/ubuntu"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvAir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">
                    <TextView
                        android:id="@+id/tvAirTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/airTitle"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:fontFamily="@font/ubuntu"
                        android:layout_marginBottom="15dp"/>
                    <ImageView
                        android:id="@+id/imgAir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_water_drop_64"/>
                    <TextView
                        android:id="@+id/tvAir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvAirTitle"
                        android:text="Air Tidak Terdeteksi"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:fontFamily="@font/ubuntu"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvGas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">
                    <TextView
                        android:id="@+id/tvGasTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gasTitle"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:fontFamily="@font/ubuntu"
                        android:layout_marginBottom="15dp"/>
                    <ImageView
                        android:id="@+id/imgGas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_local_fire_department_64"/>
                    <TextView
                        android:id="@+id/tvGas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvGasTitle"
                        android:text="Gas Terdeteksi"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:fontFamily="@font/ubuntu"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvAsap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">
                    <TextView
                        android:id="@+id/tvAsapTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asapTitle"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:fontFamily="@font/ubuntu"
                        android:layout_marginBottom="15dp"/>
                    <ImageView
                        android:id="@+id/imgAsap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_smoking_rooms_64"
                        app:tint="?attr/colorControlNormal"/>
                    <TextView
                        android:id="@+id/tvAsap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvAsapTitle"
                        android:text="Asap Terdeteksi"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:fontFamily="@font/ubuntu"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>